Fixed fullscreen border visibility issues

--- a/userChrome.css
+++ b/userChrome.css
@@ -8,6 +8,9 @@
 #main-window {
   -moz-appearance: -moz-window-titlebar !important; 
 }
+:root[sizemode="fullscreen"] #main-window {
+  -moz-appearance: none !important; 
+}
 
 /* fix colour for selected urlbar text */
 ::selection {
@@ -124,8 +127,13 @@
   height: 48px !important;
   padding: 0px 40px 0px 40px !important;
 }
+
+/* fullscreen fixes for the nav bar */
 :root[sizemode="fullscreen"] #nav-bar {
-  padding: 0px 6px 0px 6px !important; /* fullscreen fixes for the nav bar */
+  -moz-appearance: none !important; 
+  background: linear-gradient(#e5e5e5, #d3d3d3) !important;
+  border-bottom: 1px solid #898989 !important;
+  padding: 0px 6px 0px 6px !important; 
 }
 
 #urlbar[focused="true"], .searchbar-textbox[focused="true"]{
@@ -258,7 +266,7 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
 #TabsToolbar {
   padding: 0 !important;
   position: absolute !important; /* makes tab bar go to bottom */
-  bottom: 0px !important;
+  bottom: 0px !important; /* keeps tabs to bottom */
   width: 100vw !important;
   height: 31px !important; /* tabs actual height */
   border-top: 1px solid #898989 !important;
@@ -267,7 +275,7 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
   box-shadow: inset 0 1px 2px 1px rgba(0,0,0, 0.1) !important;
 }
 :root[sizemode="fullscreen"] #TabsToolbar {
-  height: 30px !important; /* fix tab align in fullscreen */
+  height: 30px !important; /* tab fix for fullscreen */
 }
 #tabbrowser-tabs {
   display: block !important;
@@ -275,7 +283,7 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
 }
 
 /* tabs width */
-.tabbrowser-tab:not([pinned]) {
+.tabbrowser-tab:not([pinned]){
   width: 180px !important;
 }
 
@@ -439,6 +447,11 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
 #nav-bar:-moz-lwtheme-brighttext {
     -moz-appearance: none !important;
 	background: linear-gradient(#393D43, #35383D) !important;
+}
+:root[sizemode="fullscreen"] #nav-bar:-moz-lwtheme-brighttext {
+	-moz-appearance: none !important; 
+	background: linear-gradient(#393D43, #35383D) !important;
+	border-bottom: 1px solid #252729 !important;
 }
 #urlbar:-moz-lwtheme-brighttext {
 	background: linear-gradient(#383D41, #3D4248) !important;
